--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "test:watch": "cross-env NODE_ENV=test jest --watchAll"
   },
   "dependencies": {
-    "react": "^16.0.0"
+    "create-react-context": "^0.2.1",
+    "react": "^16.2.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -64,7 +65,6 @@
     "enzyme-adapter-react-16": "^1.1.0",
     "enzyme-to-json": "^3.2.2",
     "jest": "^21.2.1",
-    "react-dom": "^16.1.1",
     "react-test-renderer": "^16.1.1",
     "regenerator-runtime": "^0.11.0",
     "rimraf": "^2.6.2",
